[gd_scene load_steps=9 format=4 uid="uid://bljvtgw65utvv"]

[ext_resource type="Theme" uid="uid://du4xhpvf3ifj2" path="res://menu/base_theme.tres" id="1_0gkbj"]
[ext_resource type="Script" uid="uid://bskskr0plcsag" path="res://menu/main_menu.gd" id="2_ciyvu"]
[ext_resource type="AudioStream" uid="uid://y3gwb6pwgkq" path="res://sounds/music/ProjectSnek_Major(1).ogg" id="3_usddi"]
[ext_resource type="TileSet" uid="uid://21ioic27tl8u" path="res://levels/tilesets/groud_tileset.tres" id="4_wn5o1"]
[ext_resource type="TileSet" uid="uid://bmsqc6wghc2nc" path="res://levels/tilesets/snake_textures.tres" id="5_kh61s"]
[ext_resource type="TileSet" uid="uid://cucyidbx3ps3m" path="res://levels/tilesets/collectibles_tileset.tres" id="6_i4dmh"]
[ext_resource type="TileSet" uid="uid://cktqjonxsaeyi" path="res://levels/tilesets/boxes_tileset.tres" id="7_cg7rj"]
[ext_resource type="TileSet" uid="uid://rms8er5m05td" path="res://levels/tilesets/boxes_spot_tileset.tres" id="8_usddi"]

[node name="MainMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0gkbj")
script = ExtResource("2_ciyvu")
title_color_1 = Color(1, 0, 0.966667, 1)
title_color_2 = Color(0.64874, 0.927604, 1, 1)
button_base_color = Color(1, 1, 1, 1)
button_hover_color = Color(1, 0, 0.966667, 1)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.133333, 0.137255, 0.137255, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Title" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/bold_font_size = 48
bbcode_enabled = true
text = "[b][wave amp=50 freq=1]Snekoban[/wave][/b]"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.7
alignment = 1

[node name="Play" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")
text = "Play"
flat = true

[node name="Credits" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "Credits"
flat = true

[node name="Quit" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
focus_neighbor_bottom = NodePath("../Play")
text = "Quit"
flat = true

[node name="Control2" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BGMPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_usddi")
autoplay = true
bus = &"Music"

[node name="TileMapLayer" type="TileMapLayer" parent="."]
modulate = Color(1, 1, 1, 0.262745)
tile_map_data = PackedByteArray("AAACAAIAAAAAAAEAAAACAAMAAAADAAIAAAABAAMAAAABAAAAAAABAAQAAAADAAEAAAABAAUAAAADAAEAAAABAAYAAAABAAIAAAACAAYAAAADAAAAAAACAAcAAAADAAEAAAACAAgAAAABAAIAAAADAAgAAAAFAAAAAAADAAkAAAAAAAIAAAAEAAgAAAAFAAIAAAAEAAcAAAABAAAAAAAFAAcAAAADAAAAAAAFAAgAAAAGAAEAAAAOAAcAAAABAAEAAAAOAAgAAAABAAIAAAAPAAgAAAAFAAAAAAAQAAgAAAACAAIAAAARAAgAAAADAAIAAAARAAcAAAABAAAAAAASAAcAAAADAAIAAAASAAMAAAABAAIAAAASAAIAAAAAAAEAAAASAAAAAAADAAIAAAASAP//AAABAAEAAAASAP7/AAAAAAEAAAAFAAkAAAABAAIAAAAGAAkAAAADAAAAAAAGAAoAAAABAAIAAAAHAAoAAAADAAAAAAAHAAsAAAAAAAIAAAAPAAkAAAABAAIAAAAQAAkAAAADAAAAAAAQAAoAAAADAAEAAAARAAsAAAACAAIAAAASAAsAAAABAAMAAAAQAAsAAAABAAIAAAAOAAYAAAAAAAEAAAARAAAAAAACAAAAAAAJAP//AAABAAEAAAAJAP7/AAADAAAAAAAIAP7/AAAAAAMAAAAFAP//AAABAAMAAAAEAP//AAABAAAAAAAEAAAAAAAAAAIAAAAQAAAAAAABAAIAAAAQAP//AAADAAAAAAAPAP//AAACAAIAAAAOAP//AAACAAIAAAANAP//AAABAAAAAAANAAAAAAADAAIAAAAMAAAAAAACAAAAAAALAAAAAAACAAIAAAAKAAAAAAACAAIAAAAJAAAAAAABAAIAAAASAAYAAAADAAEAAAASAAUAAAABAAAAAAATAAUAAAADAAIAAAATAAQAAAADAAEAAAATAAMAAAADAAAAAAAQAAQAAAAAAAEAAAAQAAUAAAAAAAIAAAA=")
tile_set = ExtResource("4_wn5o1")

[node name="TileMapSnake" type="TileMapLayer" parent="."]
modulate = Color(0.2185, 0.69, 0, 0.262745)
tile_map_data = PackedByteArray("AAALAAQAAQAAAAEAAFAKAAQAAQAAAAEAAFAJAAQAAQAAAAEAAFAIAAQAAQAAAAEAAFAHAAQAAQAAAAEAAFAMAAQAAQAAAAAAAFAGAAQAAQAAAAQAAAAGAAUAAQAAAAEAAAAGAAYAAQAAAAQAADAFAAYAAQAAAAIAAFA=")
tile_set = ExtResource("5_kh61s")

[node name="TileMapCollectibles" type="TileMapLayer" parent="."]
modulate = Color(1, 1, 1, 0.262745)
tile_map_data = PackedByteArray("AAARAAQAAAAAAAAAAQAEAAQAAAAAAAAAAQAIAAEAAAAAAAAAAQAPAAAAAAAAAAAAAQAOAAoAAAAAAAAAAQA=")
tile_set = ExtResource("6_i4dmh")

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
modulate = Color(1, 1, 1, 0.262745)
tile_map_data = PackedByteArray("AAAPAAYAAAAAAAAAAQACAAQAAAAAAAAAAQABAAoAAAAAAAAAAQA=")
tile_set = ExtResource("7_cg7rj")

[node name="TileMapLayer3" type="TileMapLayer" parent="."]
modulate = Color(1, 1, 1, 0.262745)
tile_map_data = PackedByteArray("AAAPAAcAAAAAAAAAAQAFAAoAAAAAAAAAAQACAAQAAAAAAAAAAQA=")
tile_set = ExtResource("8_usddi")

[connection signal="focus_entered" from="VBoxContainer/HBoxContainer/VBoxContainer/Play" to="." method="_on_play_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/HBoxContainer/VBoxContainer/Play" to="." method="_on_play_focus_exited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="focus_entered" from="VBoxContainer/HBoxContainer/VBoxContainer/Credits" to="." method="_on_credits_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/HBoxContainer/VBoxContainer/Credits" to="." method="_on_credits_focus_exited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="focus_entered" from="VBoxContainer/HBoxContainer/VBoxContainer/Quit" to="." method="_on_quit_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/HBoxContainer/VBoxContainer/Quit" to="." method="_on_quit_focus_exited"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
